# python-project

./: MyClass  README.md
day-02/lab-06/: pyproject.toml
day-02/lab-06/src/: main.py
day-03/app/: urls.py  view.py
day-03/app/templates/: custom_message.html  index.html
day-04/: main.py  pyproject.toml
day-05/: calc.py  pyproject.toml
day-05/lab/: main.py
day-06/: algebra_teste.py  compreension.py  data_class.py  monitor.db
day-06/lab-challenge/: company.db  main.py
day-06/lab-db/: main.py  sqlalchemy.py
day-06/lab-db/alembic/: alembic.ini
day-06/lab-db/app/: database.py  models.py
day-07/challenge/: main.py  test.sh
day-07/django/: Dockerfile  requirements.txt
day-07/django/backend/backend/: settings.py  urls.py
day-07/django/fastapi_app/: __init__.py  main.py  routes.py
day-07/lab-api/: main.py  test.db
day-08/lab/: README.md
day-09/: main.py
day-09/challenge/: Makefile
day-09/challenge/src/: __init__.py  account.py  account_dispatcher.py
day-09/challenge/tests/: test_account_dispatcher.py
