[tool.poetry]
name = "day-04"
version = "0.1.0"
description = "Python_Trainning_day_04"
authors = ["julas23 <julianoas@.com>"]
readme = "README.md"

packages = [
    { include = "./src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"